; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/intl/extr_localename.c_gl_locale_name.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/intl/extr_localename.c_gl_locale_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gl_locale_name(i32 %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = call i8* @gl_locale_name_thread(i32 %7, i8* %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i8*, i8** %6, align 8
  store i8* %13, i8** %3, align 8
  br label %24

14:                                               ; preds = %2
  %15 = load i32, i32* %4, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = call i8* @gl_locale_name_posix(i32 %15, i8* %16)
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i8*, i8** %6, align 8
  store i8* %21, i8** %3, align 8
  br label %24

22:                                               ; preds = %14
  %23 = call i8* (...) @gl_locale_name_default()
  store i8* %23, i8** %3, align 8
  br label %24

24:                                               ; preds = %22, %20, %12
  %25 = load i8*, i8** %3, align 8
  ret i8* %25
}

declare dso_local i8* @gl_locale_name_thread(i32, i8*) #1

declare dso_local i8* @gl_locale_name_posix(i32, i8*) #1

declare dso_local i8* @gl_locale_name_default(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
